--- a/my.plist
+++ b/my.plist
@@ -10,7 +10,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://github.com/yh8577/test/blob/master/my.ipa</string><!--修改这里-->
+                        <string>http://127.0.0.1/my.ipa</string><!--修改这里-->
                     </dict>
                 </array>
                 <key>metadata</key>
