--- a/my.plist
+++ b/my.plist
@@ -1,31 +1,49 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-    <dict>
-        <key>items</key>
-        <array>
-            <dict>
-                <key>assets</key>
-                <array>
-                    <dict>
-                        <key>kind</key>
-                        <string>software-package</string>
-                        <key>url</key>
-                        <string>http://192.168.31.186/my.ipa</string><!--修改这里-->
-                    </dict>
-                </array>
-                <key>metadata</key>
-                <dict>
-                    <key>bundle-identifier</key>
-                    <string>com.huig.test.my</string><!--修改这里-->
-                    <key>bundle-version</key>
-                    <string>1.0</string><!--修改这里-->
-                    <key>kind</key>
-                    <string>software</string>
-                    <key>title</key>
-                    <string>my</string><!--修改这里-->
-                </dict>
-            </dict>
-        </array>
-    </dict>
-</plist>
+<!--<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">-->
+<!--<plist version="1.0">-->
+<!--    <dict>-->
+<!--        <key>items</key>-->
+<!--        <array>-->
+<!--            <dict>-->
+<!--                <key>assets</key>-->
+<!--                <array>-->
+<!--                    <dict>-->
+<!--                        <key>kind</key>-->
+<!--                        <string>software-package</string>-->
+<!--                        <key>url</key>-->
+<!--                        <string>http://192.168.31.186/my.ipa</string><!--修改这里-->-->
+<!--                    </dict>-->
+<!--                </array>-->
+<!--                <key>metadata</key>-->
+<!--                <dict>-->
+<!--                    <key>bundle-identifier</key>-->
+<!--                    <string>com.huig.test.my</string><!--修改这里-->-->
+<!--                    <key>bundle-version</key>-->
+<!--                    <string>1.0</string><!--修改这里-->-->
+<!--                    <key>kind</key>-->
+<!--                    <string>software</string>-->
+<!--                    <key>title</key>-->
+<!--                    <string>my</string><!--修改这里-->-->
+<!--                </dict>-->
+<!--            </dict>-->
+<!--        </array>-->
+<!--    </dict>-->
+<!--</plist>-->
+<dict>
+    <key>kind</key>
+    <string>software-package</string>
+    <key>url</key>
+    <string>http://192.168.31.186/my.ipa</string>
+</dict>
+<dict>
+    <key>kind</key>
+    <string>display-image</string>
+    <key>url</key>
+    <string>http://192.168.31.186/image.57x57.png</string>
+</dict>
+<dict>
+    <key>kind</key>
+    <string>full-size-image</string>
+    <key>url</key>
+    <string>http://192.168.31.186/image.512x512.png</string>
+</dict>
 
