--- a/my.plist
+++ b/my.plist
@@ -10,7 +10,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://top.huig.top/Target.ipa</string><!--修改这里-->
+                    <string>http://192.168.31.186/Target.ipa</string><!--修改这里-->
                 </dict>
             </array>
             <key>metadata</key>
