--- a/my.plist
+++ b/my.plist
@@ -16,7 +16,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                 <string>com.huig.--</string><!--修改这里-->
+                 <string>com.huig.*</string><!--修改这里-->
                  <key>bundle-version</key>
                 <string>8.8.8</string><!--修改这里-->
                 <key>kind</key>
